Fixed space issue with gap

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -34,7 +34,8 @@
   justify-content: flex-start;
   align-items: center;
   background-color: var(--inputBox-color);
-  margin-right: 50px;
+  margin-right: 30px;
+  gap: 8px;
   box-shadow: var(--nav-boxShadow);
 }
 .searchbox input {
